old mobile-menu.jade file deleted; "b-" bug fixed

--- a/portfolio/on-game/index.jade
+++ b/portfolio/on-game/index.jade
@@ -34,7 +34,7 @@ html(lang="en")
 						.on-game-score-block__logos(data-animations-group)
 							.on-game-score-block__inner
 								.on-game-score-block__logo-wrapper
-									img(src="../../images/on-game/columlogo.png", alt="columlogo" data-animation="zoomIn")
+									img(src="../../images/on-game/columb-logo.png", alt="columb-logo" data-animation="zoomIn")
 								span.on-game-score-block__text.on-game-score-block__text--dark Columbus Crew<br>Soccer Club<br>(win)
 							.on-game-score-block__inner
 								.on-game-score-block__logo-wrapper
