on-game btn-link to portfolio add

--- a/portfolio/on-game/index.jade
+++ b/portfolio/on-game/index.jade
@@ -122,7 +122,7 @@ html(lang="en")
 							li.tags__item(data-animation="zoomIn") Yeoman
 							li.tags__item(data-animation="zoomIn") Google Maps
 							li.tags__item(data-animation="zoomIn") Geolocation
-						a.section__btn.btn.btn--on-game Next projects
+						a.section__btn.btn.btn--on-game(href="/portfolio") Next projects
 							include ../../icons/arrow-go
 		
 			include ../../parts/footer
