--- a/styl/blocks/project-features.styl
+++ b/styl/blocks/project-features.styl
@@ -1,3 +1,5 @@
+$animation-delay-step = 0.3s
+
 .project-features
 	background-image linear-gradient(to bottom, #ffe244, #d7bb0e)
 	&--on-game
@@ -35,13 +37,16 @@
 	position relative
 	padding-bottom 1rem
 	padding-top 4rem
+	for num in (1..3)
+		&:nth-child({num})
+			.project-features__icon-wrapper
+				animation-delay $animation-delay-step*num
 
 .project-features__icon-wrapper
 	position absolute
 	top 0
 	left 50%
 	transform translateX(-50%)
-	
 	
 .project-features__item-title
 	padding 0
