--- a/portfolio/banking/index.jade
+++ b/portfolio/banking/index.jade
@@ -68,40 +68,4 @@ html(lang="en")
 			include ../../parts/footer
 			+footer("project")
 		script(src="/js/main-nav.min.js")
-		script.
-
-			(function () {
-				var slider = document.querySelector('.slider'),
-						slidesWrapper = slider.querySelector('.slider__slides-wrapper'),
-						slideItems = slider.querySelectorAll('.slider__slide'),
-						slidesCount = slideItems.length,
-						sliderStepValue = 100/slidesCount,
-						slideCurrent = 1,
-						sliderDots = slider.querySelectorAll('.slider__dot');
-
-				function slideChange (index) {
-					var	sliderTransValue = (index-1)*sliderStepValue;
-					slidesWrapper.style.transform = 'translateX(-'+sliderTransValue+'%)';
-					sliderDots[slideCurrent-1].classList.remove('slider__dot--active');
-					sliderDots[index-1].classList.add('slider__dot--active');
-					slideCurrent = index;
-				};
-
-				slidesWrapper.style.width = slidesCount*100+'%';
-
-				sliderDots.forEach(function (item, index) {
-					sliderDots[index].addEventListener('click', function () {
-						slideChange(index+1);
-					});
-				});
-
-				window.addEventListener('keydown', function (event) {
-					if (event.keyCode == 37 && slideCurrent > 1) {
-						slideChange(slideCurrent-1);
-					}
-					if (event.keyCode == 39 && slideCurrent < slidesCount) {
-						slideChange(slideCurrent+1);
-					}
-				});
-
-			})();
+		script(src="/js/swipeshow.min.js")
