--- a/index.jade
+++ b/index.jade
@@ -143,5 +143,5 @@ html(lang="en")
 			include parts/footer
 			+footer("hp")
 		script(src="/js/main-nav.min.js")
-		script(src="/js/index.min.js")
+		script(src="/js/scroll-btn.min.js")
 		script(src="/js/swipeshow.min.js")
