--- a/styl/animations.styl
+++ b/styl/animations.styl
@@ -1,257 +1,272 @@
 .animated {
-  -webkit-animation-duration: 1s;
-  animation-duration: 1s;
-  -webkit-animation-fill-mode: both;
-  animation-fill-mode: both;
+  -webkit-animation-duration 1s
+  animation-duration 1s
+  -webkit-animation-fill-mode both
+  animation-fill-mode both
 }
 
 @keyframes fadeIn {
   from {
-    opacity: 0;
+    opacity 0
   }
 
   to {
-    opacity: 1;
+    opacity 1
   }
 }
 
 .fadeIn {
-  -webkit-animation-name: fadeIn;
-  animation-name: fadeIn;
+  -webkit-animation-name fadeIn
+  animation-name fadeIn
 }
 
 @keyframes fadeInUp {
   from {
-    opacity: 0;
-    -webkit-transform: translate3d(0, 100%, 0);
-    transform: translate3d(0, 100%, 0);
+    opacity 0
+    -webkit-transform translate3d(0, 100%, 0)
+    transform translate3d(0, 100%, 0)
   }
 
   to {
-    opacity: 1;
-    -webkit-transform: none;
-    transform: none;
+    opacity 1
+    -webkit-transform none
+    transform none
   }
 }
 
 .fadeInUp {
-  -webkit-animation-name: fadeInUp;
-  animation-name: fadeInUp;
+  -webkit-animation-name fadeInUp
+  animation-name fadeInUp
 }
 
 @keyframes fadeInUpBig {
   from {
-    opacity: 0;
-    -webkit-transform: translate3d(0, 2000px, 0);
-    transform: translate3d(0, 2000px, 0);
+    opacity 0
+    -webkit-transform translate3d(0, 2000px, 0)
+    transform translate3d(0, 2000px, 0)
   }
 
   to {
-    opacity: 1;
-    -webkit-transform: none;
-    transform: none;
+    opacity 1
+    -webkit-transform none
+    transform none
   }
 }
 
 .fadeInUpBig {
-  -webkit-animation-name: fadeInUpBig;
-  animation-name: fadeInUpBig;
+  -webkit-animation-name fadeInUpBig
+  animation-name fadeInUpBig
 }
 
 @keyframes fadeInDown {
   from {
-    opacity: 0;
-    -webkit-transform: translate3d(0, -100%, 0);
-    transform: translate3d(0, -100%, 0);
+    opacity 0
+    -webkit-transform translate3d(0, -100%, 0)
+    transform translate3d(0, -100%, 0)
   }
 
   to {
-    opacity: 1;
-    -webkit-transform: none;
-    transform: none;
+    opacity 1
+    -webkit-transform none
+    transform none
   }
 }
 
 .fadeInDown {
-  -webkit-animation-name: fadeInDown;
-  animation-name: fadeInDown;
+  -webkit-animation-name fadeInDown
+  animation-name fadeInDown
 }
 
 @keyframes fadeInLeft {
   from {
-    opacity: 0;
-    -webkit-transform: translate3d(-100%, 0, 0);
-    transform: translate3d(-100%, 0, 0);
+    opacity 0
+    -webkit-transform translate3d(-100%, 0, 0)
+    transform translate3d(-100%, 0, 0)
   }
 
   to {
-    opacity: 1;
-    -webkit-transform: none;
-    transform: none;
+    opacity 1
+    -webkit-transform none
+    transform none
   }
 }
 
 .fadeInLeft {
-  -webkit-animation-name: fadeInLeft;
-  animation-name: fadeInLeft;
+  -webkit-animation-name fadeInLeft
+  animation-name fadeInLeft
 }
 
 @keyframes fadeInRight {
   from {
-    opacity: 0;
-    -webkit-transform: translate3d(100%, 0, 0);
-    transform: translate3d(100%, 0, 0);
+    opacity 0
+    -webkit-transform translate3d(100%, 0, 0)
+    transform translate3d(100%, 0, 0)
   }
 
   to {
-    opacity: 1;
-    -webkit-transform: none;
-    transform: none;
+    opacity 1
+    -webkit-transform none
+    transform none
   }
 }
 
 .fadeInRight {
-  -webkit-animation-name: fadeInRight;
-  animation-name: fadeInRight;
+  -webkit-animation-name fadeInRight
+  animation-name fadeInRight
 }
 
 @keyframes zoomIn {
   from {
-    opacity: 0;
-    -webkit-transform: scale3d(.3, .3, .3);
-    transform: scale3d(.3, .3, .3);
+    opacity 0
+    -webkit-transform scale3d(.3, .3, .3)
+    transform scale3d(.3, .3, .3)
   }
 
   50% {
-    opacity: 1;
+    opacity 1
   }
 }
 
 .zoomIn {
-  -webkit-animation-name: zoomIn;
-  animation-name: zoomIn;
+  -webkit-animation-name zoomIn
+  animation-name zoomIn
 }
 
 @keyframes shake {
   from, to {
-    -webkit-transform: translate3d(0, 0, 0);
-    transform: translate3d(0, 0, 0);
+    -webkit-transform translate3d(0, 0, 0)
+    transform translate3d(0, 0, 0)
   }
 
   10%, 30%, 50%, 70%, 90% {
-    -webkit-transform: translate3d(-10px, 0, 0);
-    transform: translate3d(-10px, 0, 0);
+    -webkit-transform translate3d(-10px, 0, 0)
+    transform translate3d(-10px, 0, 0)
   }
 
   20%, 40%, 60%, 80% {
-    -webkit-transform: translate3d(10px, 0, 0);
-    transform: translate3d(10px, 0, 0);
+    -webkit-transform translate3d(10px, 0, 0)
+    transform translate3d(10px, 0, 0)
   }
 }
 
 .shake {
-  -webkit-animation-name: shake;
-  animation-name: shake;
+  -webkit-animation-name shake
+  animation-name shake
 }
 
 @keyframes bounce {
   from, 20%, 53%, 80%, to {
-    -webkit-animation-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
-    animation-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
-    -webkit-transform: translate3d(0,0,0);
-    transform: translate3d(0,0,0);
+    -webkit-animation-timing-function cubic-bezier(0.215, 0.610, 0.355, 1.000)
+    animation-timing-function cubic-bezier(0.215, 0.610, 0.355, 1.000)
+    -webkit-transform translate3d(0,0,0)
+    transform translate3d(0,0,0)
   }
 
   40%, 43% {
-    -webkit-animation-timing-function: cubic-bezier(0.755, 0.050, 0.855, 0.060);
-    animation-timing-function: cubic-bezier(0.755, 0.050, 0.855, 0.060);
-    -webkit-transform: translate3d(0, -30px, 0);
-    transform: translate3d(0, -30px, 0);
+    -webkit-animation-timing-function cubic-bezier(0.755, 0.050, 0.855, 0.060)
+    animation-timing-function cubic-bezier(0.755, 0.050, 0.855, 0.060)
+    -webkit-transform translate3d(0, -30px, 0)
+    transform translate3d(0, -30px, 0)
   }
 
   70% {
-    -webkit-animation-timing-function: cubic-bezier(0.755, 0.050, 0.855, 0.060);
-    animation-timing-function: cubic-bezier(0.755, 0.050, 0.855, 0.060);
-    -webkit-transform: translate3d(0, -15px, 0);
-    transform: translate3d(0, -15px, 0);
+    -webkit-animation-timing-function cubic-bezier(0.755, 0.050, 0.855, 0.060)
+    animation-timing-function cubic-bezier(0.755, 0.050, 0.855, 0.060)
+    -webkit-transform translate3d(0, -15px, 0)
+    transform translate3d(0, -15px, 0)
   }
 
   90% {
-    -webkit-transform: translate3d(0,-4px,0);
-    transform: translate3d(0,-4px,0);
+    -webkit-transform translate3d(0,-4px,0)
+    transform translate3d(0,-4px,0)
   }
 }
 
 .bounce {
-  -webkit-animation-name: bounce;
-  animation-name: bounce;
-  -webkit-transform-origin: center bottom;
-  transform-origin: center bottom;
+  -webkit-animation-name bounce
+  animation-name bounce
+  -webkit-transform-origin center bottom
+  transform-origin center bottom
 }
 
 @keyframes bounceIn {
   from, 20%, 40%, 60%, 80%, to {
-    -webkit-animation-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
-    animation-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
+    -webkit-animation-timing-function cubic-bezier(0.215, 0.610, 0.355, 1.000)
+    animation-timing-function cubic-bezier(0.215, 0.610, 0.355, 1.000)
   }
 
   0% {
-    opacity: 0;
-    -webkit-transform: scale3d(.3, .3, .3);
-    transform: scale3d(.3, .3, .3);
+    opacity 0
+    -webkit-transform scale3d(.3, .3, .3)
+    transform scale3d(.3, .3, .3)
   }
 
   20% {
-    -webkit-transform: scale3d(1.1, 1.1, 1.1);
-    transform: scale3d(1.1, 1.1, 1.1);
+    -webkit-transform scale3d(1.1, 1.1, 1.1)
+    transform scale3d(1.1, 1.1, 1.1)
   }
 
   40% {
-    -webkit-transform: scale3d(.9, .9, .9);
-    transform: scale3d(.9, .9, .9);
+    -webkit-transform scale3d(.9, .9, .9)
+    transform scale3d(.9, .9, .9)
   }
 
   60% {
-    opacity: 1;
-    -webkit-transform: scale3d(1.03, 1.03, 1.03);
-    transform: scale3d(1.03, 1.03, 1.03);
+    opacity 1
+    -webkit-transform scale3d(1.03, 1.03, 1.03)
+    transform scale3d(1.03, 1.03, 1.03)
   }
 
   80% {
-    -webkit-transform: scale3d(.97, .97, .97);
-    transform: scale3d(.97, .97, .97);
+    -webkit-transform scale3d(.97, .97, .97)
+    transform scale3d(.97, .97, .97)
   }
 
   to {
-    opacity: 1;
-    -webkit-transform: scale3d(1, 1, 1);
-    transform: scale3d(1, 1, 1);
+    opacity 1
+    -webkit-transform scale3d(1, 1, 1)
+    transform scale3d(1, 1, 1)
   }
 }
 
 .bounceIn {
-  -webkit-animation-name: bounceIn;
-  animation-name: bounceIn;
+  -webkit-animation-name bounceIn
+  animation-name bounceIn
 }
 
 @keyframes pulse {
   from {
-    -webkit-transform: scale3d(1, 1, 1);
-    transform: scale3d(1, 1, 1);
+    -webkit-transform scale3d(1, 1, 1)
+    transform scale3d(1, 1, 1)
   }
 
   50% {
-    -webkit-transform: scale3d(1.05, 1.05, 1.05);
-    transform: scale3d(1.05, 1.05, 1.05);
+    -webkit-transform scale3d(1.05, 1.05, 1.05)
+    transform scale3d(1.05, 1.05, 1.05)
   }
 
   to {
-    -webkit-transform: scale3d(1, 1, 1);
-    transform: scale3d(1, 1, 1);
+    -webkit-transform scale3d(1, 1, 1)
+    transform scale3d(1, 1, 1)
   }
 }
 
 .pulse {
-  -webkit-animation-name: pulse;
-  animation-name: pulse;
+  -webkit-animation-name pulse
+  animation-name pulse
+}
+
+@keyframes jumping {
+	
+	0% {
+		transform translateY(0)
+	}
+	
+	50% {
+		transform translateY(7px)
+	}
+	
+	100% {
+		transform translateY(0)
+	}
 }
