--- a/portfolio/on-game/index.jade
+++ b/portfolio/on-game/index.jade
@@ -114,14 +114,14 @@ html(lang="en")
 						h2.section__title Technologies
 						p.section__text For development of a sports betting application ON-GAME our engineering team used the following set of tools.
 						ul.section__tags.tags.tags--on-game
-							li.tags__item(data-animation="zoomIn") AngularJS
-							li.tags__item(data-animation="zoomIn") Jade
-							li.tags__item(data-animation="zoomIn") Stylus
-							li.tags__item(data-animation="zoomIn") Jasmine
-							li.tags__item(data-animation="zoomIn") lodash
-							li.tags__item(data-animation="zoomIn") Yeoman
-							li.tags__item(data-animation="zoomIn") Google Maps
-							li.tags__item(data-animation="zoomIn") Geolocation
+							li.tags__item AngularJS
+							li.tags__item Jade
+							li.tags__item Stylus
+							li.tags__item Jasmine
+							li.tags__item lodash
+							li.tags__item Yeoman
+							li.tags__item Google Maps
+							li.tags__item Geolocation
 						a.section__btn.btn.btn--on-game(href="/portfolio") Next projects
 							include ../../icons/arrow-go
 		
