--- a/styl/blocks/page-footer.styl
+++ b/styl/blocks/page-footer.styl
@@ -18,6 +18,11 @@
 		background-color $main-color--on-game
 		a
 			color #6a6a6a
+	&--project-yow
+		color rgba(140, 154, 181, 0.7)
+		background-color $main-color--yow
+		a
+			color rgba(140, 154, 181, 0.7)
 	
 .page-footer__wrapper
 	wrapper-fluid()
