--- a/styl/blocks/section.styl
+++ b/styl/blocks/section.styl
@@ -64,6 +64,10 @@
 		.section__text
 			margin-bottom 2.3rem
 			color #555
+	&--yow-logo-block
+		padding-top 6.5rem
+		padding-bottom 6.5rem
+		background-color #413357
 	&--full-screen
 		display flex
 		align-items center
@@ -74,6 +78,8 @@
 	wrapper-fluid()
 	display flex
 	flex-direction column
+	&--fixed
+		wrapper()
 	
 .section__project-type
 	display block
