--- a/styl/blocks/tags.styl
+++ b/styl/blocks/tags.styl
@@ -5,6 +5,7 @@ $animation-delay-step = 0.1s
 	display flex
 	flex-wrap wrap
 	justify-content center
+	margin-top 1rem
 	&--on-game
 		.tags__item
 			color #dd9b0c
