--- a/styl/index.styl
+++ b/styl/index.styl
@@ -29,5 +29,7 @@
 @import "blocks/social"
 @import "blocks/project-switcher"
 @import "blocks/approaches"
+@import "blocks/projects-reverse-block"
+@import "blocks/yow-logo"
 @import "blocks/on-game-score-block"
 @import "blocks/project-features"
