--- a/styl/variables.styl
+++ b/styl/variables.styl
@@ -2,6 +2,7 @@ $main-font = Roboto
 
 $main-color = #0e1a35
 $main-color--on-game = #333
+$main-color--yow = #372f57
 
 $transition-duration = 0.3s
 
