YOW; replace reverse block in on-game, need fix

--- a/portfolio/on-game/index.jade
+++ b/portfolio/on-game/index.jade
@@ -91,23 +91,23 @@ html(lang="en")
 							h3.project-features__item-title Performance Improvement
 							p.project-features__item-descr Desktop app performance was improved from 9 seconds to 5 seconds, mobile app performance was drastically improved from 30 seconds to 4 seconds.
 
-				section.section.section--without-padding-bottom.section--projects-reverse.section--on-game-big(data-animation="fadeIn")
-					.section__wrapper
-						section.section.section--without-padding-top.section--without-padding-bottom
-							.section__inner.section__inner--first(data-animation="fadeInLeft")
-								h2.section__title Variety of sports
-								p.section__text The application allows users to follow their favorite teams, sportsmen, and sportswomen across more than 10 sports including Soccer, Basketball, Baseball, Hockey Tennis, Golf among others.
-							.section__decorative-img.section__decorative-img--on-game-phone-1(data-animation="fadeInRight")
-						section.section.section--without-padding-top.section--without-padding-bottom
-							.section__inner.section__inner--second(data-animation="fadeInRight")
-								h2.section__title Real-time updates
-								p.section__text ON-GAME enables users to build a personalized feed and get the latest updates on the game. The users can customize ON-GAME in order to get instant alerts for upcoming games. The live commentary shows minute-by-minute match/game highlights.
-							.section__decorative-img.section__decorative-img--on-game-phone-2(data-animation="fadeInLeft")
-						section.section.section--without-padding-top.section--without-padding-bottom
-							.section__inner.section__inner--third(data-animation="fadeInLeft")
-								h2.section__title Statistics
-								p.section__text The application includes detailed statistics, schedules, makes possible to display team standings, fixtures, pre-match lineups, close game situations.
-							.section__decorative-img.section__decorative-img--on-game-phone-3(data-animation="fadeInRight")
+				section.project-page-reverse-block.project-page-reverse-block--on-game
+					.project-page-reverse-block__wrapper
+						section.project-page-reverse-block__section.project-page-reverse-block__section--with-padding-top
+							.project-page-reverse-block__inner(data-animation="fadeInLeft")
+								h2.project-page-reverse-block__title Variety of sports
+								p.project-page-reverse-block__text The application allows users to follow their favorite teams, sportsmen, and sportswomen across more than 10 sports including Soccer, Basketball, Baseball, Hockey Tennis, Golf among others.
+							.project-page-reverse-block__decorative-img.project-page-reverse-block__decorative-img--on-game-1(data-animation="fadeInRight")
+						section.project-page-reverse-block__section
+							.project-page-reverse-block__inner(data-animation="fadeInRight")
+								h2.project-page-reverse-block__title Real-time updates
+								p.project-page-reverse-block__text ON-GAME enables users to build a personalized feed and get the latest updates on the game. The users can customize ON-GAME in order to get instant alerts for upcoming games. The live commentary shows minute-by-minute match/game highlights.
+							.project-page-reverse-block__decorative-img.project-page-reverse-block__decorative-img--on-game-2(data-animation="fadeInLeft")
+						section.project-page-reverse-block__section.project-page-reverse-block__section--without-padding-bottom
+							.project-page-reverse-block__inner(data-animation="fadeInLeft")
+								h2.project-page-reverse-block__title Real-time updates
+								p.project-page-reverse-block__text ON-GAME enables users to build a personalized feed and get the latest updates on the game. The users can customize ON-GAME in order to get instant alerts for upcoming games. The live commentary shows minute-by-minute match/game highlights.
+							.project-page-reverse-block__decorative-img.project-page-reverse-block__decorative-img--on-game-3(data-animation="fadeInRight")
 
 				section.section.section--on-game-technologies(data-animation="fadeInUp")
 					.section__wrapper
