--- a/styl/blocks/main-nav.styl
+++ b/styl/blocks/main-nav.styl
@@ -35,6 +35,10 @@
 		background-color transparent
 		.main-nav__list
 			background-color rgba($main-color--on-game, 0.97)
+	&--project-yow
+		background-color transparent
+		.main-nav__list
+			background-color rgba($main-color--yow, 0.97)
 			
 	&--top
 		position absolute
