--- a/styl/blocks/section.styl
+++ b/styl/blocks/section.styl
@@ -39,21 +39,21 @@
 		overflow hidden
 	&--on-game-score-block
 		padding-top 0
-	&--on-game-big		
-		background-image url("../photos/on-game/bg.jpg")
-		background-repeat no-repeat
-		background-size cover
-		background-position center
+	// &--on-game-big		
+	// 	background-image url("../photos/on-game/bg.jpg")
+	// 	background-repeat no-repeat
+	// 	background-size cover
+	// 	background-position center
 
-		.section__wrapper
-			width 100%
-		.section__title
-			color #dbdbdb
-		.section__text
-			color #fff
-		.section
-			> *
-				animation-delay 0.3s
+	// 	.section__wrapper
+	// 		width 100%
+	// 	.section__title
+	// 		color #dbdbdb
+	// 	.section__text
+	// 		color #fff
+	// 	.section
+	// 		> *
+	// 			animation-delay 0.3s
 	&--on-game-technologies
 		background-image url("../images/on-game/on-game-yellow.png")
 		background-repeat no-repeat
@@ -127,23 +127,23 @@
 		*
 			color #555
 	
-.section__decorative-img
-	margin-top 2.75rem
-	background-repeat no-repeat
-	background-size auto 100%
-	&--on-game-phone-1
-		height 370px
-		background-image url("../images/on-game/image-1.png")
-		background-position center
-	&--on-game-phone-2
-		height 298px
-		background-image url("../images/on-game/image-2.png")
-		background-position center
-	&--on-game-phone-3
-		position relative
-		left calc(50% - 7rem)
-		height 517px
-		background-image url("../images/on-game/image-3.png")
+// .section__decorative-img
+// 	margin-top 2.75rem
+// 	background-repeat no-repeat
+// 	background-size auto 100%
+// 	&--on-game-phone-1
+// 		height 370px
+// 		background-image url("../images/on-game/image-1.png")
+// 		background-position center
+// 	&--on-game-phone-2
+// 		height 298px
+// 		background-image url("../images/on-game/image-2.png")
+// 		background-position center
+// 	&--on-game-phone-3
+// 		position relative
+// 		left calc(50% - 7rem)
+// 		height 517px
+// 		background-image url("../images/on-game/image-3.png")
 .section__tags
 	margin-bottom 6.125rem
 	
@@ -207,31 +207,31 @@
 @media $desktop-widths
 
 	.section
-		&--projects-reverse
-			display flex
-			flex-wrap wrap
-			.section
-				display flex
-				&:nth-child(even)
-					> .section__inner
-						order 2
-						.section__title, .section__text
-							text-align left
-				.section__decorative-img
-					width 60%
-					margin 0
-					background-size contain
-				.section__inner
-					display flex
-					flex-direction column
-					justify-content center
-					width 40%
-					margin 0
-					.section__title, .section__text
-						text-align right
-		&--on-game-big
-			.section__wrapper
-				width 1170px
+		// &--projects-reverse
+		// 	display flex
+		// 	flex-wrap wrap
+		// 	.section
+		// 		display flex
+		// 		&:nth-child(even)
+		// 			> .section__inner
+		// 				order 2
+		// 				.section__title, .section__text
+		// 					text-align left
+		// 		.section__decorative-img
+		// 			width 60%
+		// 			margin 0
+		// 			background-size contain
+		// 		.section__inner
+		// 			display flex
+		// 			flex-direction column
+		// 			justify-content center
+		// 			width 40%
+		// 			margin 0
+		// 			.section__title, .section__text
+		// 				text-align right
+		// &--on-game-big
+		// 	.section__wrapper
+		// 		width 1170px
 			
 		&--on-game-score-block
 			padding-top 5rem
@@ -246,15 +246,15 @@
 		&--on-game
 			max-width 50rem
 			
-	.section__decorative-img
-		position relative
-		background-position center
-		&--on-game-phone-1
-			left 5rem
-		&--on-game-phone-2
-			left -8rem
-		&--on-game-phone-3
-			left 13rem
+	// .section__decorative-img
+	// 	position relative
+	// 	background-position center
+	// 	&--on-game-phone-1
+	// 		left 5rem
+	// 	&--on-game-phone-2
+	// 		left -8rem
+	// 	&--on-game-phone-3
+	// 		left 13rem
 
 	.section__btn
 		&--hidden-on-desktop
