--- a/styl/variables.styl
+++ b/styl/variables.styl
@@ -12,4 +12,8 @@ $desktop-widths = "(min-width: 1200px)"
 $desktop-large-widths = "(min-width: 1400px)"
 $mobile-widths-only = "(max-width: 767px)"
 
+$mobile-wrapper-width = 280px
+$tablet-wrapper-width = 648px
+$desktop-wrapper-width = 1170px
+
 $retina = "(min-resolution: 144dpi), (min-resolution: 1.5dppx)"
