--- a/portfolio/yow/b-index.jade
+++ b/portfolio/yow/b-index.jade
@@ -28,17 +28,17 @@ html(lang="en")
 						h1.section__title Your Open World
 						p.section__text You travel a lot, but do not keep track of the places you visit? Your friend asks you about countries you have seen and you scratch your head thinking? Better scratch the map. With our new application yow you can keep track of your journeys’ history. As we travel extensively throughout the year for fellow travel-lovers we crafted this handful tool.
 
-				section.section.section--yow-logo-block(data-animation="fadeInUp")
-					.yow-logo
-						.yow-logo__icon-wrapper
+				section.section.section--yow-logo-block(data-animation="fadeIn")
+					.yow-logo(data-animations-gruop)
+						.yow-logo__icon-wrapper(data-animation="fadeInLeft")
 							img(src="../../images/yow/yow-icon-1.png" alt="yow")
-						.yow-logo__arrow-wrapper
+						.yow-logo__arrow-wrapper(data-animation="fadeInLeft")
 							include ../../icons/arrow-right
-						.yow-logo__icon-wrapper
+						.yow-logo__icon-wrapper(data-animation="fadeInLeft")
 							img(src="../../images/yow/yow-icon-2.png" alt="yow")
-						.yow-logo__arrow-wrapper
+						.yow-logo__arrow-wrapper(data-animation="fadeInLeft")
 							include ../../icons/arrow-right
-						.yow-logo__icon-wrapper
+						.yow-logo__icon-wrapper(data-animation="fadeInLeft")
 							img(src="../../images/yow/yow-icon-3.png" alt="yow")
 
 				section.section.section--without-padding-bottom(data-animation="fadeIn")
@@ -56,36 +56,36 @@ html(lang="en")
 							li.tags__item Jenkins
 							li.tags__item Git
 
-				section.projects-reverse-block.projects-reverse-block--grey-gradient
-					.projects-reverse-block__wrapper
-						section.projects-reverse-block__section.projects-reverse-block__section--with-padding-top
-							.projects-reverse-block__decorative-img.projects-reverse-block__decorative-img--yow-1(data-animation="fadeInRight")
-							.projects-reverse-block__inner(data-animation="fadeInLeft")
-								h2.projects-reverse-block__title About App
-								p.projects-reverse-block__text YOW is a mobile application that functions as a travel scratch map. In the beginning, your travel map is black, but whenever you visit a new country, city or street it unveils an area which was black before and marks the place you have been to. The map is based on the Google Maps API. You can build the list of the favorite places, use navigation for finding spots.
-						section.projects-reverse-block__section
-							.projects-reverse-block__decorative-img.projects-reverse-block__decorative-img--yow-2(data-animation="fadeInLeft")
-							.projects-reverse-block__inner(data-animation="fadeInRight")
-								h2.projects-reverse-block__title Share with friends
-								p.projects-reverse-block__text Your friend asks you about countries you have seen and you scratch your head thinking? Let your friends know how many countries/cities you have seen so far. You can share your exploration progress by clicking on social media buttons (Facebook, Twitter, Google+...)
+				section.project-page-reverse-block.project-page-reverse-block--yow
+					.project-page-reverse-block__wrapper
+						section.project-page-reverse-block__section.project-page-reverse-block__section--with-padding-top
+							.project-page-reverse-block__decorative-img.project-page-reverse-block__decorative-img--yow-1(data-animation="fadeInLeft")
+							.project-page-reverse-block__inner(data-animation="fadeInRight")
+								h2.project-page-reverse-block__title About App
+								p.project-page-reverse-block__text YOW is a mobile application that functions as a travel scratch map. In the beginning, your travel map is black, but whenever you visit a new country, city or street it unveils an area which was black before and marks the place you have been to. The map is based on the Google Maps API. You can build the list of the favorite places, use navigation for finding spots.
+						section.project-page-reverse-block__section
+							.project-page-reverse-block__decorative-img.project-page-reverse-block__decorative-img--yow-2(data-animation="fadeInRight")
+							.project-page-reverse-block__inner(data-animation="fadeInLeft")
+								h2.project-page-reverse-block__title Share with friends
+								p.project-page-reverse-block__text Your friend asks you about countries you have seen and you scratch your head thinking? Let your friends know how many countries/cities you have seen so far. You can share your exploration progress by clicking on social media buttons (Facebook, Twitter, Google+...)
 
-				section.section.project-features(data-animation="fadeInUp")
-					h2.project-features__title Our Features
-					p.project-features__text Our technical team used a comprehensive set of tools and technologies during yow development.
+				section.section.project-features.project-features--yow(data-animation="fadeInUp")
+					h2.section__title.project-features__title Our Features
+					p.section__text.project-features__text Our technical team used a comprehensive set of tools and technologies during yow development.
 					ul.project-features__list
 						li.project-features__item
 							.project-features__icon-wrapper(data-animation="zoomIn")
-								//- include ../../icons/on-game-features-ic1
+								include ../../icons/yow-features-ic1
 							h3.project-features__item-title Offline Working
 							p.project-features__item-descr YOW works offline, including maps, which means there is no need to look for Wi-Fi spots.
 						li.project-features__item
 							.project-features__icon-wrapper(data-animation="zoomIn")
-								//- include ../../icons/on-game-features-ic2
+								include ../../icons/yow-features-ic2
 							h3.project-features__item-title Storing Pictures
 							p.project-features__item-descr Every time you take your finest snapshots you can attach them to the places on the map through the app.
 						li.project-features__item
 							.project-features__icon-wrapper(data-animation="zoomIn")
-								//- include ../../icons/on-game-features-ic3
+								include ../../icons/yow-features-ic3
 							h3.project-features__item-title Smart Adviser
 							p.project-features__item-descr Once you go on a trip to a new area, the app will give you suggestions for the places to see in nearby.
 
