--- a/styl/blocks/project-features.styl
+++ b/styl/blocks/project-features.styl
@@ -1,8 +1,10 @@
 $animation-delay-step = 0.3s
 
 .project-features
-	background-image linear-gradient(to bottom, #ffe244, #d7bb0e)
+	background-repeat no-repeat
+	background-size cover
 	&--on-game
+		background-image linear-gradient(to bottom, #ffe244, #d7bb0e)
 		.project-features__item
 			&:nth-child(n+2)
 				padding-top 7.8rem
@@ -26,7 +28,25 @@ $animation-delay-step = 0.3s
 			
 		.project-features__item-descr
 			color #555
+	&--yow
+		background-image url("../photos/yow/yow-features-bg.jpg")
+		.project-features__title
+			color #fff
+		.project-features__text
+			color #fff
+		.project-features__item
+			padding-top 6rem
+		.project-features__item-title
+			color #fff
+		.project-features__item-descr
+			color #fff
+			
+.project-features__title
+	margin-bottom 6rem
 	
+.project-features__text
+	display none
+
 .project-features__list
 	ul-reset()
 	wrapper-fluid()
@@ -35,8 +55,10 @@ $animation-delay-step = 0.3s
 	
 .project-features__item
 	position relative
-	padding-bottom 1rem
+	padding-bottom 3rem
 	padding-top 4rem
+	&:last-child
+		padding-bottom 0
 	for num in (1..3)
 		&:nth-child({num})
 			.project-features__icon-wrapper
@@ -120,12 +142,30 @@ $animation-delay-step = 0.3s
 			.project-features__item-descr
 				text-align left
 				
+	.project-features__title
+		margin-bottom 2rem
+		
+	.project-features__text
+		display block
+		margin-bottom 3rem
+
+	.project-features__list
+		width 14rem
+		
+	.project-features__item-descr
+		padding 0
+		margin 0
+		font-size 14px
+		font-weight 300
+		letter-spacing 0.3px
+		text-align center
+					
 @media $desktop-widths
 
 	.project-features
 		&--on-game
 			.project-features__list
-				width 1170px
+				width $desktop-wrapper-width
 	
 			.project-features__item
 				padding-top 4.5rem
@@ -173,6 +213,9 @@ $animation-delay-step = 0.3s
 						transform translateX(-50%)
 						&::before, &::after
 							display none
+							
+			.project-features__text
+				margin-bottom 4.3rem
 						
 			.project-features__item-title
 				text-align center
@@ -183,7 +226,7 @@ $animation-delay-step = 0.3s
 	.project-features__list
 		flex-direction row
 		justify-content space-between
-		width 1240px
+		width $desktop-wrapper-width
 		
 	.project-features__item
 		width 18.5rem
