--- a/styl/blocks/slider.styl
+++ b/styl/blocks/slider.styl
@@ -3,10 +3,19 @@
 	&--project
 		.slider__slide-inner
 			display flex
+			align-items center
 			justify-content center
+			height 100%
 			max-height 420px
-			img
-				max-height 320px
+			.slider__img-wrapper
+				display flex
+				align-items center
+				justify-content center
+				height 100%
+				img
+					max-width 770px
+					height auto
+					max-height 320px
 		
 .slider__slides-wrapper
 	ul-reset()
