project-page-reverse-block fix

--- a/portfolio/yow/b-index.jade
+++ b/portfolio/yow/b-index.jade
@@ -63,7 +63,7 @@ html(lang="en")
 							.project-page-reverse-block__inner(data-animation="fadeInRight")
 								h2.project-page-reverse-block__title About App
 								p.project-page-reverse-block__text YOW is a mobile application that functions as a travel scratch map. In the beginning, your travel map is black, but whenever you visit a new country, city or street it unveils an area which was black before and marks the place you have been to. The map is based on the Google Maps API. You can build the list of the favorite places, use navigation for finding spots.
-						section.project-page-reverse-block__section
+						section.project-page-reverse-block__section.project-page-reverse-block__section--with-padding-bottom
 							.project-page-reverse-block__decorative-img.project-page-reverse-block__decorative-img--yow-2(data-animation="fadeInRight")
 							.project-page-reverse-block__inner(data-animation="fadeInLeft")
 								h2.project-page-reverse-block__title Share with friends
