--- a/styl/blocks/project-page-reverse-block.styl
+++ b/styl/blocks/project-page-reverse-block.styl
@@ -18,9 +18,10 @@
 			color #8492af
 	
 .project-page-reverse-block__section
-	padding-bottom 5rem
 	&--with-padding-top
 		padding-top 5rem
+	&--with-padding-bottom
+		padding-bottom 5rem
 	&--without-padding-bottom
 		padding-bottom 0
 	
@@ -44,31 +45,39 @@
 .project-page-reverse-block__decorative-img
 	position relative
 	background-repeat no-repeat
-	background-position center
 	&--on-game-1
 		height 370px
+		margin-top 3rem
+		margin-bottom 3rem
 		background-image url("../images/on-game/image-1.png")
 		background-position center
 		background-size auto 100%
 	&--on-game-2
 		height 298px
+		margin-top 1.5rem
+		margin-bottom 3.5rem
 		background-image url("../images/on-game/image-2.png")
 		background-position center
 		background-size auto 100%
 	&--on-game-3
 		left calc(50% - 7rem)
 		height 517px
+		margin-top 3rem
 		background-image url("../images/on-game/image-3.png")
+		background-position left
 		background-size auto 100%
 	&--yow-1
 		height 280px
 		margin-bottom 2rem
 		background-image url("../images/yow/about-image.png")
+		background-position center
 		background-size contain
 	&--yow-2
 		height 280px
+		margin-top 5rem
 		margin-bottom 4.3rem
 		background-image url("../images/yow/share-image.png")
+		background-position center
 		background-size auto 100%
 		@media (min-width: 490px)
 			height 57vw
@@ -83,10 +92,24 @@
 		font-size 18px
 		
 	.project-page-reverse-block__decorative-img
+		&--on-game-1
+			height 584px
+			margin-top 3.5rem
+			margin-bottom 4.8rem
+		&--on-game-2
+			height 484px
+			margin-top 4rem
+			margin-bottom 4.6rem
+		&--on-game-3
+			height 693px
+			margin-top 3.2rem
+			left calc(50% - 9rem)
 		&--yow-1
 			height 460px
+			margin-bottom 3rem
 		&--yow-2
 			height 650px
+			margin-bottom 4rem
 		
 @media $desktop-widths
 
