start TraWell page

--- a/styl/blocks/page-footer.styl
+++ b/styl/blocks/page-footer.styl
@@ -13,6 +13,11 @@
 	&--project,
 	&--contact-us
 		background-color $main-color
+	&--project-trawell
+		color #88a0b3
+		background-image linear-gradient(to bottom, #025b85, #1d427f)
+		a
+			color #88a0b3
 	&--project-on-game
 		color #6a6a6a
 		background-color $main-color--on-game
