--- a/styl/blocks/page-header.styl
+++ b/styl/blocks/page-header.styl
@@ -16,6 +16,9 @@
 		background-image url("../photos/landing-small.jpg")
 		background-size cover
 		background-position center
+	
+	&--project-trawell
+		min-height 17rem
 		
 	&--project-on-game
 		min-height 17rem
@@ -83,6 +86,9 @@
 @media $tablet-widths
 
 	.page-header
+		&--project-trawell
+			min-height 22rem
+			
 		&--project-yow
 			min-height 22rem
 			background-size 100%
