--- a/styl/blocks/project-page-reverse-block.styl
+++ b/styl/blocks/project-page-reverse-block.styl
@@ -1,6 +1,8 @@
 .project-page-reverse-block
 	overflow hidden
 	font-family $main-font
+	&--trawell
+		background-image linear-gradient(to bottom, #f6f7fa, #ffffff)
 	&--on-game
 		background-image url("../photos/on-game/bg.jpg")
 		background-repeat no-repeat
