--- a/styl/blocks/section.styl
+++ b/styl/blocks/section.styl
@@ -2,24 +2,32 @@
 	padding-top 5rem
 	padding-bottom 5rem
 	font-family $main-font
+	
 	&--first-after-menu
 		padding-top 10.5rem
+		
 	&--without-padding-top
 		padding-top 0
+		
 	&--without-padding-bottom
 		padding-bottom 0
+		
 	&--small-padding-bottom
 		padding-bottom 3.125rem
+		
 	&--without-title
 		padding-top 0
+		
 	&--main-color
 		background-color $main-color
 		.section__title
 			color #fff
 		.section__text
 			color #8c9ab5
+			
 	&--bottom-with-gradient
 		bottom-with-gradient(#4444b9, #ec523e)
+		
 	&--slide
 		display flex
 		flex-direction column
@@ -30,15 +38,32 @@
 			margin-top auto
 			margin-right auto
 			margin-left 0
+			
 	&--approaches
 		.section__title
 			color #fff
 		.section__text
 			color #f3f8ff
+			
+	&--img
+		display flex
+		align-items center
+		justify-content center
+		padding-top 0
+		padding-bottom 0
+
 	&--projects-reverse
 		overflow hidden
+		
+	&--big-section-with-bg-trawell
+		padding-top 0
+		padding-bottom 0
+		// background-image
+		background-repeat no-repeat
+		
 	&--on-game-score-block
 		padding-top 0
+		
 	&--on-game-technologies
 		background-image url("../images/on-game/on-game-yellow.png")
 		background-repeat no-repeat
@@ -49,10 +74,12 @@
 		.section__text
 			margin-bottom 2.3rem
 			color #555
+			
 	&--yow-logo-block
 		padding-top 6.5rem
 		padding-bottom 6.5rem
 		background-color #413357
+		
 	&--full-screen
 		display flex
 		align-items center
