--- a/styl/blocks/main-nav.styl
+++ b/styl/blocks/main-nav.styl
@@ -25,16 +25,24 @@
 		background-color transparent
 		.main-nav__list
 			background-color rgba($main-color, 0.97)
+			
 	&--services,
 	&--portfolio,
 	&--contact-us
 		background-color $main-color
 		.main-nav__list
 			background-color rgba($main-color, 0.97)
+			
+	&--project-trawell
+		background-color transparent
+		.main-nav__list
+			background-image linear-gradient(to bottom, rgba(#025b85, 0.97), rgba(#1d427f, 0.97))
+			
 	&--project-on-game
 		background-color transparent
 		.main-nav__list
 			background-color rgba($main-color--on-game, 0.97)
+			
 	&--project-yow
 		background-color transparent
 		.main-nav__list
@@ -68,6 +76,8 @@
 		position fixed
 		background-color $main-color
 		animation main-nav-show 0.5s ease forwards
+		&.main-nav--project-trawell
+			background-image linear-gradient(to bottom, #025b85, #1d427f)
 		&.main-nav--project-on-game
 			background-color $main-color--on-game
 		&.main-nav--project-yow
@@ -77,6 +87,8 @@
 		position fixed
 		background-color $main-color
 		animation main-nav-hide 0.5s ease forwards
+		&.main-nav--project-trawell
+			background-image linear-gradient(to bottom, #025b85, #1d427f)
 		&.main-nav--project-on-game
 			background-color $main-color--on-game
 		&.main-nav--project-yow
@@ -185,6 +197,7 @@
 				height auto
 				padding-top 0
 				background-color transparent
+				background-image none
 				opacity 1
 				transform none
 				transition none
