--- a/styl/blocks/project-features.styl
+++ b/styl/blocks/project-features.styl
@@ -3,6 +3,19 @@ $animation-delay-step = 0.3s
 .project-features
 	background-repeat no-repeat
 	background-size cover
+	&--trawell
+		padding-bottom 4.3rem
+		.project-features__item
+			padding-top 5.2rem
+			
+		.project-features__icon-wrapper
+			width 64px
+			height 64px
+			background-color #ffffff
+			box-shadow 0.2px 3px 10.5px 2.5px rgba(187, 187, 187, 0.21)
+			border solid 1px rgba(236, 233, 233, 0.48)
+			border-radius 50%		
+
 	&--on-game
 		background-image linear-gradient(to bottom, #ffe244, #d7bb0e)
 		.project-features__item
