TraWell without img

--- a/portfolio/booking/b-index.jade
+++ b/portfolio/booking/b-index.jade
@@ -39,12 +39,12 @@ html(lang="en")
 								p.project-features__item-descr Natural language processing entity linking was implemented to enhance user search performance improvement.
 							li.project-features__item
 								.project-features__icon-wrapper(data-animation="zoomIn")
-									//- include ../../icons/trawell-features-ic2
+									include ../../icons/trawell-features-ic2
 								h3.project-features__item-title Invoicing system
 								p.project-features__item-descr The web service has a built-in invoicing system that creates invoices, sends payment reminders, keeps track of business expenses.
 							li.project-features__item
 								.project-features__icon-wrapper(data-animation="zoomIn")
-									//- include ../../icons/trawell-features-ic3
+									include ../../icons/trawell-features-ic3
 								h3.project-features__item-title Payment system
 								p.project-features__item-descr An integration of a third party payment platform that enables accepting online payments from clients throughout the world.
 
