--- a/styl/blocks/portfolio-item.styl
+++ b/styl/blocks/portfolio-item.styl
@@ -37,13 +37,6 @@
 		padding-bottom 23rem
 		&--mobile
 			background-position center bottom 2rem
-
-	.portfolio-item__img-wrapper
-		img
-			width 17rem
-		&--img-horisontal
-			img
-				width 28rem
 		
 @media $desktop-widths
 
@@ -66,6 +59,8 @@
 	.portfolio-item__tags
 		justify-content flex-start
 		width 26rem
+		margin-right 0
+		margin-left 0
 		
 	.portfolio-item__btn
 		display block
