--- a/styl/blocks/project-features.styl
+++ b/styl/blocks/project-features.styl
@@ -9,6 +9,9 @@ $animation-delay-step = 0.3s
 			padding-top 5.2rem
 			
 		.project-features__icon-wrapper
+			display flex
+			align-items center
+			justify-content center
 			width 64px
 			height 64px
 			background-color #ffffff
