--- a/styl/blocks/project-page-reverse-block.styl
+++ b/styl/blocks/project-page-reverse-block.styl
@@ -47,6 +47,16 @@
 .project-page-reverse-block__decorative-img
 	position relative
 	background-repeat no-repeat
+	&--trawell-1
+		height 400px
+		background-image url("../images/trawell/calendar-image-1.png")
+		background-position center
+		background-size auto 100%
+	&--trawell-2
+		height 400px
+		background-image url("../images/trawell/event-image-2.png")
+		background-position center
+		background-size auto 100%
 	&--on-game-1
 		height 370px
 		margin-top 3rem
@@ -54,6 +64,7 @@
 		background-image url("../images/on-game/image-1.png")
 		background-position center
 		background-size auto 100%
+		
 	&--on-game-2
 		height 298px
 		margin-top 1.5rem
@@ -61,6 +72,7 @@
 		background-image url("../images/on-game/image-2.png")
 		background-position center
 		background-size auto 100%
+		
 	&--on-game-3
 		left calc(50% - 7rem)
 		height 517px
@@ -68,12 +80,14 @@
 		background-image url("../images/on-game/image-3.png")
 		background-position left
 		background-size auto 100%
+		
 	&--yow-1
 		height 280px
 		margin-bottom 2rem
 		background-image url("../images/yow/about-image.png")
 		background-position center
 		background-size contain
+		
 	&--yow-2
 		height 280px
 		margin-top 5rem
@@ -94,6 +108,10 @@
 		font-size 18px
 		
 	.project-page-reverse-block__decorative-img
+		&--trawell-1
+			height 658px
+		&--trawell-2
+			height 658px
 		&--on-game-1
 			height 584px
 			margin-top 3.5rem
@@ -147,6 +165,10 @@
 		wrapper()
 		
 	.project-page-reverse-block__decorative-img
+		&--trawell-1
+			right 7rem
+		&--trawell-2
+			left 14rem
 		&--on-game-1
 			left 5rem
 		&--on-game-2
