--- a/styl/blocks/main-nav.styl
+++ b/styl/blocks/main-nav.styl
@@ -28,7 +28,8 @@
 			
 	&--services,
 	&--portfolio,
-	&--contact-us
+	&--contact-us,
+	&--404
 		background-color $main-color
 		.main-nav__list
 			background-color rgba($main-color, 0.97)
