--- a/styl/blocks/page-footer.styl
+++ b/styl/blocks/page-footer.styl
@@ -11,7 +11,8 @@
 	&--services-slide,
 	&--portfolio,
 	&--project,
-	&--contact-us
+	&--contact-us,
+	&--404
 		background-color $main-color
 	&--project-trawell
 		color #88a0b3
