--- a/styl/blocks/page-header.styl
+++ b/styl/blocks/page-header.styl
@@ -19,6 +19,9 @@
 	
 	&--project-trawell
 		min-height 17rem
+		background-image url("../photos/booking/trawell-top-bg.jpg")
+		background-size cover
+		background-position center
 		
 	&--project-on-game
 		min-height 17rem
