--- a/styl/blocks/project-page-reverse-block.styl
+++ b/styl/blocks/project-page-reverse-block.styl
@@ -53,10 +53,11 @@
 		background-position center
 		background-size auto 100%
 	&--trawell-2
+		left 15%
 		height 400px
 		background-image url("../images/trawell/event-image-2.png")
 		background-position center
-		background-size auto 100%
+		background-size contain
 	&--on-game-1
 		height 370px
 		margin-top 3rem
