--- a/styl/blocks/section.styl
+++ b/styl/blocks/section.styl
@@ -44,13 +44,6 @@
 			color #fff
 		.section__text
 			color #f3f8ff
-			
-	&--img
-		display flex
-		align-items center
-		justify-content center
-		padding-top 0
-		padding-bottom 0
 
 	&--projects-reverse
 		overflow hidden
@@ -58,8 +51,12 @@
 	&--big-section-with-bg-trawell
 		padding-top 0
 		padding-bottom 0
-		// background-image
+		background-image url("../images/trawell/main-bg.jpg")
 		background-repeat no-repeat
+		background-position top center
+		
+	&--gray-gradient
+		background-image linear-gradient(to bottom, #f6f7fa, #ffffff)
 		
 	&--on-game-score-block
 		padding-top 0
@@ -142,12 +139,26 @@
 .section__tags
 	margin-bottom 6.125rem
 	
+.section__img-wrapper
+	display flex
+	align-items center
+	justify-content center
+	&--with-padding-bottom
+		padding-bottom 6rem
+	
 .section__btn
 	display flex
 	align-self center
 	margin 0 auto
 	svg
 		margin-left 0.7rem
+		
+.section__404
+	margin 0 auto
+	margin-bottom 1rem
+	font-size 60px
+	font-weight 300
+	color #8492af
 
 @media $tablet-widths
 
@@ -189,6 +200,9 @@
 		font-size 18px
 		&--hidden-on-mobile
 			display inline
+			
+	.section__404
+		font-size 100px
 
 @media $desktop-widths
 
